objects/skuid__Page__c.object
<CustomObject>
    <fields>
        <fullName>skuid__Composer_Settings__c</fullName>
        <description>Composer settings for this page, not used in runtime</description>
        <label>Composer Settings</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>skuid__Count_Auto_Saved_Versions__c</fullName>
        <label># Auto-Saved Versions</label>
        <summaryFilterItems>
            <field>skuid__Page_Version__c.skuid__IsAutoSave__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>skuid__Page_Version__c.skuid__Page__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>skuid__IsMaster__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a &quot;master&quot; page in that it can be used as a template for other pages</description>
        <label>Is Master</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>skuid__Last_Modified_Date_Check__c</fullName>
        <description>Used by Skuid internal processes and should not be used for other purposes.</description>
        <label>Last Modified Date Check</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>skuid__Layout2__c</fullName>
        <label>Layout2</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>skuid__Layout3__c</fullName>
        <label>Layout3</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>skuid__Layout4__c</fullName>
        <label>Layout4</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>skuid__MasterPage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to this page&apos;s &quot;Master&quot; page</description>
        <label>Master Page</label>
        <referenceTo>skuid__Page__c</referenceTo>
        <relationshipLabel>Child Pages</relationshipLabel>
        <relationshipName>Pages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>skuid__Max_Auto_Saves__c</fullName>
        <defaultValue>25</defaultValue>
        <inlineHelpText>The maximum number of automatically-saved Page Versions Skuid will create for this Page before it will start deleting the oldest Auto-Saves.</inlineHelpText>
        <label>Max Auto-Saves</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>skuid__Module__c</fullName>
        <description>Which module is this Page included in?</description>
        <inlineHelpText>Which module is this Page included in?</inlineHelpText>
        <label>Module</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Skuid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>skuid__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Desktop</fullName>
                    <default>true</default>
                    <label>Desktop</label>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>skuid__UniqueId__c</fullName>
        <externalId>true</externalId>
        <label>UniqueId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Page</label>
    <listViews>
        <fullName>skuid__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>skuid__All_Pages</fullName>
        <columns>NAME</columns>
        <columns>skuid__Module__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All Pages</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Page Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pages</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>skuid__Max_Auto_Saves_At_Least_0</fullName>
        <active>true</active>
        <description>Max Auto-Saves must be greater or equal to 0</description>
        <errorConditionFormula>AND(
NOT(ISBLANK(skuid__Max_Auto_Saves__c)),
skuid__Max_Auto_Saves__c &lt; 0
)</errorConditionFormula>
        <errorDisplayField>skuid__Max_Auto_Saves__c</errorDisplayField>
        <errorMessage>Max Auto-Saves must be greater than or equal to 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>skuid__Page_Name_Validation</fullName>
        <active>true</active>
        <description>Restricts the characters that can be used in a Page&apos;s name.</description>
        <errorConditionFormula>OR(
CONTAINS(Name,&quot; &quot;),
CONTAINS(Name,&quot;&apos;&quot;),
CONTAINS(Name,&apos;&quot;&apos;),
CONTAINS(Name,&quot;&amp;&quot;),
CONTAINS(Name,&quot;?&quot;),
ISBLANK(Name)
)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>A Page&apos;s name cannot be blank, and cannot contain spaces, &amp;, ?, quotes, or other characters not permitted in URLs.</errorMessage>
    </validationRules>
</CustomObject>